--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-indigo.min.css" /> 
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-    <style>
-        .content {
-            border-radius: 2px;
-            padding: 80px 56px;
-            margin-bottom: 80px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/syntax.css" /> 
+    <link rel="stylesheet" href="css/page.css" /> 
 
     <title>Litkoder</title>
 </head>
