--- a/css/syntax.css
+++ b/css/syntax.css
@@ -3,6 +3,7 @@
    original base16 by Chris Kempson (https://github.com/chriskempson/base16)
 */
 
+.highlight { background: #333333 }
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
