--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/syntax.css" /> 
     <link rel="stylesheet" href="css/page.css" /> 
 
-    <title>{{page.title}}</title>
+    <title>Litkoder</title>
 </head>
 <html>
     <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
