--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/syntax.css" /> 
     <link rel="stylesheet" href="css/page.css" /> 
 
-    <title>Litkoder</title>
+    <title>{{page.title}}</title>
 </head>
 <html>
     <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
         <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
             <div class="mdl-layout__header-row">
-                <span class="mdl-layout-title">Litkoder</span>
+                <span class="mdl-layout-title">{{page.title}}</span>
             </div>
         </header>
         <main class="mdl-layout__content">
