--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-indigo.min.css" /> 
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-    <link rel="stylesheet" href="../css/syntax.css" /> 
-    <link rel="stylesheet" href="../css/page.css" /> 
+    <link rel="stylesheet" href="css/syntax.css" /> 
+    <link rel="stylesheet" href="css/page.css" /> 
 
     <title>{{page.title}}</title>
 </head>
